# sparksql-demo

./: .gitignore  Demo.ipynb  Dockerfile  README.md  docker-compose.master.yml  docker-compose.worker.yml  docker-compose.worker2.yml  docker-compose.worker3.yml  docker-compose.yml  main.py  pyproject.toml  sparksql_demo.ipynb  start-service.sh  stop-service.sh
scripts/: mysql_init.sql
src/: SparkSQL.ipynb
