[tool.poetry]
name = "sparksql-demo"
version = "0.1.0"
description = ""
authors = ["knguyennt <khoanguyennt2010@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pyspark = {extras = ["connect"], version = "^3.5.1"}
mysql-connector-python = "^9.0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
