[tool.poetry]
name = "sparksql-demo"
version = "0.1.0"
description = ""
authors = ["nguyennguyentruong <nguyenntk.18@grad.uit.edu.vn>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyspark = "^3.5.2"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
